k8s/prod/intake-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intake
  namespace: alerts-prod

spec:
  type: ClusterIP

  selector:
    app: intake

  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
