k8s/prod/provider-stubs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider-stubs
  namespace: alerts-prod

spec:
  type: ClusterIP

  selector:
    app: provider-stubs

  ports:
    - name: sms
      port: 4000
      targetPort: 4000

    - name: email
      port: 4001
      targetPort: 4001
